--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "jupyterlab",
     "matplotlib",
     "mkdocs",
-    "mlflow>=3.1.1",
+    "mlflow<=3.1.1",
     "notebook",
     "numpy",
     "pandas",
